fix(rules): resolve NPE on wildcard CORS patterns and align test suite with Zero-Trust
- Fix order of execution in `CorsInsecureProtocolsRule#isLocalhost` to check for
  `null` hosts before invoking String methods, preventing NPE on wildcard
  patterns like `http://*.domain.com`.
- Add IPv6 bracket stripping in `isLocalhost` to correctly recognize loopback
  URIs containing explicit ports (e.g., `http://[::1]:3000`).
- Refactor `CorsInsecureProtocolsRuleTest` to target native Actuator properties
  (`management.endpoints.web.cors.*`) and enforce Zero-Trust assertions across
  all profiles using parameterized tests.
- Remove obsolete profile-based exemption tests for CORS rules.